force-app/main/default/objects/Board__c/fields/Background_Image__c.field-meta.xml
<CustomField>
    <fullName>Background_Image__c</fullName>
    <defaultValue>&quot;/resource/kickboard__Kickboard_Assets/general.png&quot;</defaultValue>
    <description>A Swim Lane can have a background image as a guide. Commonly, these images will be uploaded in static resources and referenced as /resource/STATIC_RESOURCE/IMAGE.png

Images can be any size, but, we recommed 1280x720 which fit well into presentations.</description>
    <inlineHelpText>A Swim Lane can have a background image as a guide. Commonly, these images will be uploaded in static resources and referenced as /resource/STATIC_RESOURCE/IMAGE.png

Images can be any size, but, we recommed 1280x720 which fit well into presentations.</inlineHelpText>
    <label>Background Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>