force-app/main/default/objects/Board__c/fields/Board_Template__c.field-meta.xml
<CustomField>
    <fullName>Board_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Template</label>
    <referenceTo>Board__c</referenceTo>
    <relationshipLabel>Boards from Template</relationshipLabel>
    <relationshipName>Boards_from_Template</relationshipName>
    <type>Lookup</type>
</CustomField>