force-app/main/default/objects/Board__c/fields/Design_Stage__c.field-meta.xml
<CustomField>
    <fullName>Design_Stage__c</fullName>
    <label>Design Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empathize</fullName>
            </value>
            <value>
                <fullName>Define</fullName>
            </value>
            <value>
                <fullName>Ideate</fullName>
            </value>
            <value>
                <fullName>Prototype_Test</fullName>
                <label>Prototype &amp; Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>