force-app/main/default/objects/Board__c/fields/Lane__c.field-meta.xml
<CustomField>
    <fullName>Lane__c</fullName>
    <label>Lane</label>
    <referenceTo>Lane__c</referenceTo>
    <relationshipLabel>Boards</relationshipLabel>
    <relationshipName>Boards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>