force-app/main/default/objects/Board__c/fields/Number_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cards__c</fullName>
    <label>Number of Cards</label>
    <summaryForeignKey>Card__c.Board__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>