force-app/main/default/objects/Board__c/fields/Time_to_Complete_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete_in_minutes__c</fullName>
    <defaultValue>25</defaultValue>
    <description>This is the suggested time to complete this activity.</description>
    <inlineHelpText>This is the suggested time to complete this activity.</inlineHelpText>
    <label>Time to Complete (in minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>